--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,26 +2,29 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  font-size: 100%;
-  font-weight: 400;
-  line-height: 1.5rem;
-  color: theme(colors.black);
-  text-transform: none;
-  text-size-adjust: 100%;
-  text-rendering: optimizelegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-synthesis: none;
-
-  background-color: theme(colors.white);
-}
-
-label {
-  cursor: pointer;
-}
-
 @layer base {
+  :root {
+    font-size: 100%;
+    font-weight: 400;
+    line-height: 1.5rem;
+    color: theme(colors.black);
+    text-transform: none;
+    text-size-adjust: 100%;
+    text-rendering: optimizelegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    font-synthesis: none;
+
+    background-color: theme(colors.white);
+  }
+
+  body {
+    font-family: var(--font-satoshi);
+  }
+
+  label {
+    cursor: pointer;
+  }
 }
 
 @layer components {
