--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,11 +29,33 @@
 
 @layer components {
   .btn {
-    @apply flex w-full items-center justify-center py-4 font-medium;
+    @apply flex w-full items-center justify-center py-4;
     min-height: 52px;
     border-radius: 62px;
     background: theme(colors.black);
     color: theme(colors.white);
+  }
+
+  .btn_lght {
+    @apply flex w-full items-center justify-center py-4;
+    min-height: 52px;
+    border-radius: 62px;
+    background-color: theme(colors.white);
+    color: theme(colors.black);
+    border: 1px solid rgba(0, 0, 0, 0.1);
+  }
+
+  .discount {
+    @apply text-redOrange bg-redOrange/10 flex h-5 items-center justify-center text-[0.625rem] font-medium;
+
+    width: 42px;
+  }
+
+  .crossedOutPrice {
+    @apply text-black/40;
+
+    text-decoration: line-through;
+    text-decoration-line: strikethrough;
   }
 }
 
@@ -77,18 +99,10 @@
     }
   }
 
-  /* .row {
-    grid-column: span 2;
-  } */
-
   .list-brands {
     @apply container grid py-10;
-    grid-template-columns: repeat(6, 1fr);
-    /* column-gap: 34px; */
-    /* justify-content: space-between; */
+    grid-template-columns: repeat(9, 1fr);
     row-gap: 22px;
-
-    /* grid-area: 3 row-1 / 2 row-2; */
 
     & > li {
       display: flex;
@@ -96,17 +110,42 @@
     }
 
     & > li:nth-child(n) {
-      grid-column: span 2;
+      grid-column: span 3;
     }
 
     & > li:nth-last-child(2) {
-      grid-column: 1 / span 3;
+      grid-column: 1 / span 4;
       grid-row-start: 2;
+      justify-content: end;
     }
 
     & > li:last-child {
-      grid-column: 4 / span 3;
+      grid-column: 6 / span 4;
       grid-row-start: 2;
+      justify-content: start;
     }
+  }
+
+  .image-hero {
+    animation: imageHero 2s ease-in-out;
+  }
+
+  .star {
+    opacity: 0;
+    animation: imageHero 1s ease-in-out;
+    animation-delay: 1s;
+    animation-fill-mode: forwards;
+  }
+}
+
+@keyframes imageHero {
+  0% {
+    opacity: 0;
+    transform: translateX(-15px) translateY(10px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateX(0) translateY(0);
   }
 }
