--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,6 +25,10 @@
   label {
     cursor: pointer;
   }
+
+  *:focus {
+    outline-color: #000;
+  }
 }
 
 @layer components {
@@ -77,7 +81,7 @@
   }
 
   .container_products {
-    @apply flex gap-4 overflow-x-scroll;
+    @apply flex gap-4 overflow-x-scroll px-4 mt:px-16 md:px-20;
 
     -ms-overflow-style: none; /* Internet Explorer 10+ */
     scrollbar-width: none; /* Firefox */
