add: the beginning of authorization

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,29 +41,39 @@
     color: #000;
   }
 
-  .btn {
-    @apply flex w-full items-center justify-center;
-    min-height: 40px;
+  .shell {
+    @apply flex w-full items-center justify-center px-4;
+
     border-radius: 62px;
+  }
+
+  .btn {
+    @apply shell;
+    min-height: 40px;
     background: theme(colors.black);
     color: theme(colors.white);
   }
 
   .btn_lght {
-    @apply flex w-full items-center justify-center;
+    @apply shell;
     min-height: 40px;
-    border-radius: 62px;
     background-color: theme(colors.white);
     color: theme(colors.black);
     border: 1px solid rgba(0, 0, 0, 0.1);
   }
 
+  .icon_base {
+    @apply flex items-center justify-center rounded-full;
+    min-height: 1.75rem;
+    min-width: 1.75rem;
+  }
+
   .icon {
-    @apply flex min-h-[28px] min-w-[28px] items-center justify-center rounded-full bg-black;
+    @apply icon_base bg-black;
   }
 
   .icon_lght {
-    @apply flex min-h-[28px] min-w-[28px] items-center justify-center rounded-full border border-solid border-black/60 bg-white;
+    @apply icon_base border border-solid border-black/60 bg-white;
   }
 
   .discount {
@@ -96,6 +106,10 @@
     @apply flex h-[26px] w-10 items-center justify-center rounded-[4.6px] border border-solid border-geyser bg-white;
     filter: drop-shadow(0px 0.384px 3.842px rgba(183, 183, 183, 0.08))
       drop-shadow(0px 3.842px 7.684px rgba(183, 183, 183, 0.08));
+  }
+
+  .field {
+    @apply shell min-h-[2.5rem];
   }
 }
 
