--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,33 +33,19 @@
 
 @layer components {
   .stn_title {
-    font-family: var(--font-intergralCF-bold);
-    font-size: 2rem;
-    font-weight: 700;
-    line-height: 36px;
-    text-align: center;
-    color: #000;
+    @apply text-center font-integralCF text-[2rem] font-bold leading-9 text-black;
   }
 
   .shell {
-    @apply flex w-full items-center justify-center px-4;
-
-    border-radius: 62px;
+    @apply flex w-full items-center justify-center rounded-[62px] px-4;
   }
 
   .btn {
-    @apply shell;
-    min-height: 40px;
-    background: theme(colors.black);
-    color: theme(colors.white);
+    @apply shell min-h-[2.5rem] bg-black text-white;
   }
 
   .btn_lght {
-    @apply shell;
-    min-height: 40px;
-    background-color: theme(colors.white);
-    color: theme(colors.black);
-    border: 1px solid rgba(0, 0, 0, 0.1);
+    @apply shell min-h-[2.5rem] border-black/10 bg-white text-black;
   }
 
   .icon_base {
@@ -107,8 +93,7 @@
   }
 
   .field {
-    @apply block;
-    background-color: inherit;
+    @apply bg-inherit block;
 
     &:focus-within {
       svg {
@@ -121,12 +106,11 @@
     }
 
     div > svg {
-      @apply max-w-[18px] shrink-0 text-black/40 transition duration-300 ease-in-out;
+      @apply max-w-[18px] shrink-0 fill-white text-black/40 transition duration-300 ease-in-out;
     }
 
     div > input {
-      @apply w-full  outline-none;
-      background-color: inherit;
+      @apply bg-inherit w-full outline-none;
     }
   }
 
@@ -194,10 +178,6 @@
       grid-row-start: 2;
       justify-content: start;
     }
-  }
-
-  .field_gr {
-    @apply field;
   }
 }
 
