--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,11 +41,11 @@
   }
 
   .btn {
-    @apply shell min-h-[2.5rem] bg-black text-white;
+    @apply shell min-h-[2.5rem] bg-black text-white transition-colors;
   }
 
   .btn_lght {
-    @apply shell min-h-[2.5rem] border-black/10 bg-white text-black;
+    @apply shell min-h-[2.5rem] border border-black/10 bg-white text-black transition-colors;
   }
 
   .icon_base {
@@ -61,16 +61,11 @@
   }
 
   .discount {
-    @apply flex h-5 items-center justify-center bg-redOrange/10 text-[0.625rem] font-medium text-redOrange;
-
-    width: 42px;
-    border-radius: 62px;
+    @apply flex h-5 w-[2.625rem] items-center justify-center rounded-[62px] bg-redOrange/10 text-[0.625rem] font-medium text-redOrange;
   }
 
   .discount_price {
-    @apply text-black/40;
-
-    text-decoration: line-through;
+    @apply text-black/40 line-through;
     text-decoration-line: strikethrough;
   }
 
