--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -88,7 +88,7 @@
   }
 
   .field {
-    @apply relative block bg-inherit;
+    @apply relative block;
 
     &:focus-within {
       svg {
@@ -96,56 +96,52 @@
       }
     }
 
-    &:has(input:autofill) {
-      div {
-        @apply bg-gallery;
+    * {
+      @apply transition-colors;
+    }
+
+    input {
+      @apply shell min-h-[2.5rem] shadow-md transition-shadow;
+
+      /* 92% support
+      &:has(+ svg) {
+        @apply pl-10;
+      }  */
+
+      &:is(:autofill, :read-only) {
+        box-shadow: 0 0 0px 100px theme(colors.gallery) inset !important;
+
+        &:read-only {
+          @apply text-black/50;
+        }
+      }
+
+      &:is(:focus, :active) {
+        @apply outline-none;
+      }
+
+      &:is(
+          :invalid:not(:placeholder-shown):not(:focus),
+          [aria-invalid='true']
+        ) {
+        @apply shadow-redOrange/10;
+
+        & ~ svg {
+          @apply text-redOrange;
+        }
+
+        & ~ p {
+          @apply text-redOrange;
+        }
       }
     }
 
-    input:autofill {
-      background-color: #000;
-    }
-
-    div {
-      @apply shell min-h-[2.5rem] gap-[0.875rem] bg-white shadow-sm;
-    }
-
-    div > svg {
-      @apply max-w-[18px] shrink-0 fill-white text-black/40 transition duration-300 ease-out;
-    }
-
-    div > input {
-      @apply w-full bg-inherit outline-none;
-    }
-
     p {
-      @apply absolute bottom-[-20px] left-[16px] text-xs transition duration-300 ease-in-out;
+      @apply absolute top-[2.8rem] pl-4 text-xs text-black/80 transition duration-300 ease-in-out;
     }
 
-    p:empty {
-      @apply opacity-0;
-    }
-  }
-
-  .field_error {
-    @apply relative;
-
-    &:focus-within {
-      svg {
-        @apply text-redOrange;
-      }
-    }
-
-    div {
-      @apply shadow-redOrange/10;
-    }
-
-    div > svg {
-      @apply text-redOrange;
-    }
-
-    p {
-      @apply text-redOrange opacity-100;
+    svg {
+      @apply absolute left-4 top-[13px] max-w-[18px] fill-white text-black/40;
     }
   }
 
